<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/propertyCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="10dp"
    app:cardElevation="@dimen/_3sdp"
    app:cardUseCompatPadding="true">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        style="@style/MaterialAlertDialog.Material3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bookmark"
        app:fabSize="mini"
        android:layout_gravity="end"
        android:backgroundTint="@color/tran_gray"
        android:layout_margin="@dimen/_16sdp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8sdp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/propertyImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_160sdp"
            android:src="@drawable/property" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/propertyType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_weight="1"
                android:text="@string/property_type"
                android:textColor="@color/text_color1"
                android:textSize="@dimen/text_size4" />

            <TextView
                android:id="@+id/propertyPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/property_price"
                android:textColor="@color/text_color1"
                android:textSize="@dimen/text_size4" />

        </LinearLayout>

        <TextView
            android:id="@+id/propertyAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:text="@string/address"
            android:textColor="@color/text_color1"
            android:textSize="@dimen/text_size4" />

        <TextView
            android:id="@+id/propertyCodeNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:text="@string/code_number"
            android:textColor="@color/text_color1"
            android:textSize="@dimen/text_size4"
            android:textAlignment="viewStart"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:src="@drawable/square" />

                <TextView
                    android:id="@+id/propertyArea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/property_area"
                    android:textColor="@color/text_color1"
                    android:textSize="@dimen/text_size4"
                    android:layout_gravity="bottom"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_20sdp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:src="@drawable/bed" />

                <TextView
                    android:id="@+id/bedroomsNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bedrooms"
                    android:textColor="@color/text_color1"
                    android:textSize="@dimen/text_size4"
                    android:layout_gravity="bottom" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>